# flame

./: .gitignore  .gitmodules  LICENSE  README.md  convert_dcp_to_hf.py  convert_hf_to_dcp.py  download_checkpoint.py  download_dataset.py  measure_sink_rate.py  passkey_retrieval.py  pyproject.toml  register_softpick.py  setup.py  sink_rate_per_layer.py  sink_rate_results.txt  sparsity_rate_per_layer.py  top_acceptance_rate.py  torchtitan  train.py  train.sh  train.toml
configs/: delta_net_1B.json  delta_net_340M.json  dsmtp_transformer_120M.json  dsmtp_transformer_1B.json  dsmtp_transformer_340M.json  dsmtp_transformer_7B.json  gated_deltanet_1B.json  gated_deltanet_340M.json  gla_340M.json  gla_7B.json  gsa_1B.json  gsa_340M.json  hgrn2_340M.json  mamba2_1B.json  mamba2_340M.json  mamba_120M.json  mamba_1B.json  mamba_340M.json  mono_transformer_120M.json  mono_transformer_1B.json  mono_transformer_340M.json  mono_transformer_7B.json  mtp_transformer_120M.json  mtp_transformer_1B.json  mtp_transformer_340M.json  mtp_transformer_7B.json  myopic_transformer_120M.json  myopic_transformer_1B.json  myopic_transformer_340M.json  rectified_transformer_120M.json  rectified_transformer_340M.json  samba_120M.json  samba_1B.json  sba_340m.json  scaled_softpick_transformer_120M.json  scaled_softpick_transformer_340M.json  scaled_vanilla_transformer_120M.json  scaled_vanilla_transformer_340M.json  softpick_transformer_120M.json  softpick_transformer_1B.json  (+18 more)
evaluation_lm_eval/: download_model.py  run_eval.py  test_load.py
flame/: checkpoint.py  config_manager.py  data.py  (+4 more)
(+40 files in other folders)
